Adjustments and error fixation
